# CarryPigeon-Server

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  Rocket.toml  group_script.sql  public_script.sql  script.sql
.github/workflows/: rust.yml
doc/: CarryPigeon.md  framework.drawio
logs/: log.txt
minori-jwt/: Cargo.toml
minori-jwt/src/: claims.rs  encoding.rs  error.rs  header.rs  lib.rs  test.rs
script/: develop_script.sh  stop_script.sh
src/: Rocket.toml  lib.rs  main.rs
src/controller/: account.rs  authenticator.rs  decode_message.rs  group.rs  message.rs  mod.rs
src/controller/account/: mod.rs
src/controller/account/authenticator/: mod.rs
src/controller/account/user/: mod.rs
src/controller/chat/message/: mod.rs
src/controller/tree_hole/: mod.rs
src/controller/ws/: mod.rs
src/dao/: authenticator.rs  basic.rs  chat.rs  group.rs  group_message.rs  mod.rs  private.rs  private_message.rs  row.rs  user.rs  user_token.rs
src/dao/account/: mod.rs
src/dao/account/friend/: mod.rs
src/dao/account/group/: mod.rs
src/dao/account/user/: mod.rs
src/dao/message/: mod.rs
src/manager/: mod.rs
src/manager/ws/: mod.rs
src/model/: mod.rs
src/model/chat/: mod.rs
src/model/chat/tag/: mod.rs
src/model/chat/tag/friend/: mod.rs
src/model/chat/tag/group/: mod.rs
src/model/chat/tag/tree_hole/: mod.rs
src/model/chat/type/: mod.rs
src/model/chat/type/text/: mod.rs
src/model/do/: account.rs  message.rs  mod.rs
src/model/dto/: mod.rs
src/model/dto/account/: mod.rs
src/model/dto/account/user/: mod.rs
src/model/dto/tree_hole/: mod.rs
src/model/dto/ws/: mod.rs
src/model/protocol/: mod.rs
src/model/protocol/http/: mod.rs
src/model/protocol/http/request/: mod.rs
src/model/protocol/http/response/: mod.rs
src/model/protocol/ws/: mod.rs
src/model/protocol/ws/request/: mod.rs
src/model/protocol/ws/response/: mod.rs
src/model/response/: mod.rs
src/model/vo/: mod.rs
src/model/vo/account/: mod.rs
src/model/vo/account/user/: mod.rs
src/model/vo/chat/: mod.rs
src/model/vo/tree_hole/: mod.rs
src/model/vo/ws/: mod.rs
src/model/ws/: mod.rs
src/repository/: claims.rs  jwt.rs  mod.rs
src/repository/account/: mod.rs
src/repository/account/friend/: mod.rs
src/repository/account/group/: mod.rs
src/repository/account/user/: mod.rs
src/repository/message/: mod.rs
src/service/: clamav.rs  messages_service.rs  mod.rs  socket.rs  upload_file.rs
src/service/account/: mod.rs
src/service/account/user/: mod.rs
src/service/chat/: mod.rs
src/service/chat/public/: mod.rs
src/service/chat/tree_hole/: mod.rs
src/service/tree_hole/: mod.rs
src/service/ws/: mod.rs
src/test/: mod.rs
src/test/dao/: group.rs  mod.rs
src/test/utils/: mod.rs
src/test/utils/crypto/: mod.rs
src/test/utils/id/: mod.rs
src/utils/: mod.rs
src/utils/crypto/: mod.rs
src/utils/id/: mod.rs
src/ws/: mod.rs
src/ws/dispatcher/: mod.rs
src/ws/socket/: mod.rs
tls/: certs.pem  key.pem
