[package]
name = "carrypigeon-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# 用于处理请求的相关库
rocket = { version = "0.5.1", features = ["tls"] }
rocket_ws = "0.1.1"
# 用于格式化请求返回值
rocket-json-response = "0.6.5"
# 用于处理数据库的相关库
sqlx = { version = "0.7.4", features = [
    "runtime-tokio",
    "postgres",
    "json",
    "chrono",
] }
redis = { version = "0.25.4", features = ["tokio-comp", "aio"] }
# 日志输出
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tokio = "1.38.0"
tokio-test = "0.4.4"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
chrono = "0.4.38"
jsonwebtoken = { version = "9.3.0", features = ["use_pem"] }
rand = { version = "0.8.5", features = ["std_rng"] }
pkcs8 = { version = "0.10.2", features = ["alloc"] }
aes-gcm = "0.10.3"
cbc = { version = "0.1.2", features = ["block-padding", "alloc"] }
thiserror = "1.0.63"
# 用于定义全局变量
lazy_static = "1.5.0"
# 加密相关库
rust-crypto = "0.2.36"
aes = "0.8.4"
rsa = "0.9.6"
base64 = "0.21.7"