[package]
name = "carrypigeon-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# 用于处理请求的相关库
rocket = { version = "0.5.1", features = ["tls","json"] }
rocket_ws = "0.1.1"
# 用于格式化请求返回值
rocket-json-response = "0.6.5"
# 日志输出
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tokio = "1.38.0"
tokio-test = "0.4.4"
serde = { version = "1.0.203", features = ["derive"] }
jsonwebtoken = { version = "9.3.0", features = ["use_pem"] }
rand = { version = "0.8.5", features = ["std_rng"] }
pkcs8 = { version = "0.10.2", features = ["alloc"] }
cbc = { version = "0.1.2", features = ["block-padding", "alloc"] }
thiserror = "1.0.63"
base64 = "0.22.1"
# 数据库连接相关
rbs = { version = "4.5" }
rbdc-mysql = { version = "4.5" }
rbatis = { version = "4.5"}
redis = { version = "0.26.1", features = ["tokio-comp", "aio"] }
